# Sakula_Rust

./: Cargo.toml  README.md
src/: base_crawler.rs  main.rs  main1.rs  my_request.rs
src/Utils/: AsyncPost.rs  DownloadInChucks.rs  Input.rs  Path.rs  RequestHeaders.rs  css.rs  getEleNum.rs  processBar.rs  splitlist.rs  threadRun.rs
src/crawler/: lib.rs  mod.rs  sakula.rs
src/headers/: lib.rs  mod.rs  sakula.rs
src/request/: lib.rs  mod.rs  my_request.rs  sakula.rs
src/tools/: request.rs
