[package]
name = "sakula_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
error-chain = "0.12.4"
lazy_static = "1.4.0"
regex = "1.8.4"
reqwest = {version = "0.11.18", features = ['blocking', 'json']}
scraper = "0.16.0"
serde = {version="1.0.164", features = ['derive']}
serde_json = "1.0.96"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["macros", "io-util"] }
url = "2.4.0"
